# superhuman-ai-consistency

./: LICENSE  README.md
chess-ai-testing/: .gitignore  LICENSE  README.md  extract_data.py  pyproject.toml  setup.cfg  setup.py
chess-ai-testing/data/: convert_pgn_to_fens.py  create_forced_moves_database.py  create_no_pawns_position_database.py  create_random_board_database.py
chess-ai-testing/experiments/: recommended_move_invariance_testing.py  transformation_invariance_testing.py
chess-ai-testing/experiments/analysis/: board_analysis.py  load_results.py  plot_distribution.py  plot_distributions.sh  plot_interesting_examples.py  plot_interesting_examples.sh
chess-ai-testing/experiments/evolutionary_algorithms/: evolutionary_algorithm_configs.py  evolutionary_algorithm_distributed_oracle_queries_async.py
chess-ai-testing/rl_testing/config_parsers/: __init__.py  abstract.py  data_generator_config_parser.py  engine_config_parser.py  evolutionary_algorithm_config_parser.py
legal-ai-testing/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
legal-ai-testing/data/subsets/: DATA_PLACEHOLDER.txt
legal-ai-testing/experiments/: classify_adversarial_paraphrases.py  create_paraphrased_facts.py  plot_summary_plots.py  test_model_performance.py
legal-ai-testing/legal_testing/datasets/ECHR19/: ECHR19.py  utils.py
legal-ai-testing/legal_testing/models/: bert_echr_only_head.py  hyperparameter_tuning_config.yaml
legal-ai-testing/legal_testing/util/: gpt_interface.py  plot_paraphrases.py
llm-testing/: DATA_PLACEHOLDER.txt
(+51 files in other folders)
